<resources>
    <string name="app_name">Cakua</string>
    <string name="format_currency">Rp%.2f</string>
    <string name="sisa_saldo">Sisa Saldo</string>
    <string name="rp50000">Rp50000</string>
    <string name="rp60000">Rp60000</string>
    <string name="pemasukan">Total Pemasukan</string>
    <string name="pengeluaran">Total Pengeluaran</string>
    <string name="transaksi">Daftar Transaksi</string>
    <string name="nama_transaksi">Nama transaksi</string>
    <string name="harga_rp">Harga (Rp)</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="perbarui_transaksi">Perbarui Transaksi</string>
    <string name="tambah_transaksi">Tambah Transaksi</string>
    <string name="pepaya">Pepaya</string>
    <string name="rp3000">Rp3000</string>
</resources>