<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/lightBlue">

        <LinearLayout
            android:id="@+id/balance_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sisa_saldo"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rp50000"
                android:textSize="32sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/balance_layout"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rp60000"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:textColor="@color/colorPrimaryDark"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pemasukan"
                        android:textSize="14sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/expense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rp60000"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:textColor="@color/red"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pengeluaran"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/recyclerview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dashboard"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/transaksi"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />

<!--        ini buat lihat grafik-->
        <Button
            android:id="@+id/viewChartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/recyclerview_title"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="9dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="Lihat Grafik"
            android:textColor="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/recyclerview_title"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#F8FAFC" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:src="@drawable/ic_add"
            android:backgroundTint="@color/colorPrimary"
            app:tint="@color/white"
            app:borderWidth="0dp"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>